--- a/Signal/stylesheets/manifest_bridge.css
+++ b/Signal/stylesheets/manifest_bridge.css
@@ -3337,8 +3337,7 @@
 
 .module-image__image {
   object-fit: cover;
-  cursor: pointer;
-  margin-bottom: -5px; }
+  cursor: pointer; }
 
 .module-image__bottom-overlay {
   height: 48px;
